--- a/Deploy de aplicações/fase4_credito.ipynb
+++ b/Deploy de aplicações/fase4_credito.ipynb
@@ -1044,11 +1044,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cadastrados_limpo.loc[df_cadastrados_limpo['Anos_empregado']<0,'Anos_empregado']=0  #se for menos que zero, colocar 0"
+    "df_cadastrados_limpo.loc[df_cadastrados_limpo['Anos_empregado']<0,'Anos_empregado']=0  #se for menos que zero, colocar 0 h"
    ]
   },
   {
